--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     repositories {
+        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/'}
         maven {
             url "http://maven.aliyun.com/nexus/content/repositories/releases/"
         }
@@ -16,7 +17,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.1'
-        
+        classpath 'com.hujiang.aspectjx:gradle-android-plugin-aspectjx:2.0.8'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -24,6 +26,7 @@ buildscript {
 
 allprojects {
     repositories {
+        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/'}
         maven {
             url "http://maven.aliyun.com/nexus/content/repositories/releases/"
         }
