--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+//引入外部定义插件
 apply plugin: 'com.chenqiao.myplugin'
 buildscript {
     repositories {
@@ -11,6 +12,7 @@ buildscript {
     }
 }
 
+//自定义插件
 apply plugin:CustomPlugin
 class CustomPlugin implements Plugin<Project> {
     @Override
