--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':aopdemo', ':pluginapp_host', ':pluginapp_plugin', ':gradleplugin'
+include ':app', ':aopdemo', ':pluginapp_host', ':pluginapp_plugin', ':gradleplugin', ':ipcsample'
 rootProject.name='AndroidAdvancePractices'
